backend/logs/scan_3a9529afebca.log
[2026-03-16 02:53:13] [INFO    ] [scan.3a9529afebca] [Recon] Discovering subdomains for pianistprodigy.com...
[2026-03-16 02:53:13] [INFO    ] [scan.3a9529afebca] [Recon] Starting subdomain discovery for pianistprodigy.com
[2026-03-16 02:53:16] [INFO    ] [scan.3a9529afebca] [Recon] assetfinder OK (2.7s, 109 bytes)
[2026-03-16 02:53:16] [INFO    ] [scan.3a9529afebca] [Recon] subfinder OK (2.7s, 52 bytes)
[2026-03-16 02:53:16] [INFO    ] [scan.3a9529afebca] [Recon] Done: 2 from subfinder, 5 from assetfinder, 3 unique total.
[2026-03-16 02:53:16] [INFO    ] [scan.3a9529afebca] [Resolver] Resolving 3 hosts...
[2026-03-16 02:53:16] [INFO    ] [scan.3a9529afebca] [Resolver] Resolving 3 hosts via dnsx
[2026-03-16 02:53:17] [INFO    ] [scan.3a9529afebca] [Resolver] dnsx OK (0.8s, 3377 bytes)
[2026-03-16 02:53:17] [INFO    ] [scan.3a9529afebca] [Resolver] Resolved 3 hosts, 3 unique IPs
[2026-03-16 02:53:17] [INFO    ] [scan.3a9529afebca] [OriginIP] Detecting origin IPs / CDN bypass...
[2026-03-16 02:53:17] [INFO    ] [scan.3a9529afebca] [OriginIP] Probing origin IP for pianistprodigy.com
[2026-03-16 02:53:18] [INFO    ] [scan.3a9529afebca] [OriginIP] Found 3 IPs total. CDN: [], Origin: ['104.21.68.37', '172.67.186.80', '128.199.103.31']
[2026-03-16 02:53:18] [INFO    ] [scan.3a9529afebca] [PortScan] Scanning ports on 3 hosts...
[2026-03-16 02:53:18] [INFO    ] [scan.3a9529afebca] [PortScan] Scanning 3 hosts
[2026-03-16 02:53:24] [INFO    ] [scan.3a9529afebca] [PortScan] naabu OK (5.8s, 3906 bytes)
[2026-03-16 02:53:24] [INFO    ] [scan.3a9529afebca] [PortScan] 18 open ports found across 3 hosts. Ports: [22, 53, 80, 110, 143, 389, 443, 465, 587, 993, 995, 5222, 5269, 7025, 8443]
[2026-03-16 02:53:24] [INFO    ] [scan.3a9529afebca] [ServiceScan] Detecting services on 18 open ports...
[2026-03-16 02:53:25] [INFO    ] [scan.3a9529afebca] [ServiceScan] nmap on 3 target(s), 15 ports
[2026-03-16 02:53:25] [WARNING ] [scan.3a9529afebca] [ServiceScan] nmap failed: TCP/IP fingerprinting (for OS scan) requires root privileges.
QUITTING!

[2026-03-16 02:53:25] [INFO    ] [scan.3a9529afebca] [ServiceScan] Found 0 services, 0 OS matches
[2026-03-16 02:53:25] [INFO    ] [scan.3a9529afebca] [HTTPProbe] Probing HTTP/HTTPS endpoints...
[2026-03-16 02:53:25] [INFO    ] [scan.3a9529afebca] [HTTPProbe] Probing 81 URLs
[2026-03-16 02:53:52] [INFO    ] [scan.3a9529afebca] [HTTPProbe] httpx OK (26.8s, 6419 bytes)
[2026-03-16 02:53:52] [INFO    ] [scan.3a9529afebca] [HTTPProbe] 9 live hosts, tech: ['Cloudflare', 'Cloudflare Browser Insights', 'HTTP/3', 'Java', 'Nginx'], servers: ['cloudflare', 'nginx']
[2026-03-16 02:53:52] [INFO    ] [scan.3a9529afebca] [VulnScan] Running vuln scan on 9 endpoints...
[2026-03-16 02:53:53] [INFO    ] [scan.3a9529afebca] [VulnScan] Starting Nuclei + Nikto in parallel
[2026-03-16 02:53:53] [INFO    ] [scan.3a9529afebca] [VulnScan] Primary URL: https://pianistprodigy.com
[2026-03-16 02:53:53] [WARNING ] [scan.3a9529afebca] [VulnScan] nikto failed: + ERROR: Unable to open '' for write: 
1 at /var/lib/nikto/plugins/nikto_report_text.plugin line 41.

[2026-03-16 02:53:54] [WARNING ] [scan.3a9529afebca] [VulnScan] nuclei failed: 
[2026-03-16 02:53:54] [INFO    ] [scan.3a9529afebca] [VulnScan] Nuclei: 0 findings | Nikto: 0 findings
[2026-03-16 02:53:54] [INFO    ] [scan.3a9529afebca] [TLSScan] Analyzing TLS configuration for pianistprodigy.com...
[2026-03-16 02:53:54] [INFO    ] [scan.3a9529afebca] [TLSScan] Analyzing TLS on pianistprodigy.com:443
[2026-03-16 02:53:54] [WARNING ] [scan.3a9529afebca] [TLSScan] testssl.sh failed: [0;35m/usr/local/bin/testssl.sh: unrecognized option "--no-color"[m

[2026-03-16 02:53:54] [INFO    ] [scan.3a9529afebca] [Aggregation] Aggregating and normalizing all results...
[2026-03-16 02:53:55] [INFO    ] [scan.3a9529afebca] [AIAnalysis] Running AI-powered security analysis...
[2026-03-16 02:53:55] [INFO    ] [scan.3a9529afebca] [Report] Generating professional PDF report...
[2026-03-16 02:53:56] [ERROR   ] [scan.3a9529afebca] Scan failed: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'
Traceback (most recent call last):
  File "/home/ubuntu/pentestbot_2/core/job_manager.py", line 355, in _execute
    pdf_path = pdf_gen.generate(report_data)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/pentestbot_2/report/pdf_generator.py", line 82, in generate
    doc.build(
TypeError: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'

[2026-03-16 02:53:56] [INFO    ] [scan.3a9529afebca] [Error] Scan failed: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'
